--- a/src/scss/componets/product-item.scss
+++ b/src/scss/componets/product-item.scss
@@ -1,230 +1,31 @@
 .product-item{
-  background: #FFFFFF;
-  position: relative;
-  &:hover{
-    background: #FFFFFF;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.13);
-    .product-item__footer{
-      opacity: 1;
-      height: auto;
-      visibility: visible;
-      z-index: 11;
+    flex: 1 0 418px;
+    max-width: 418px;
+    box-shadow: 0 1px 3px rgba(var(--black),0.12);
+    &__figure{
+        margin: 0;
+        padding: 0;
+        img{
+            display: block;
+        }
     }
-  }
-  &__img,
-  .embed-responsive-item{
-    padding: 5px;
-    border: 0.5px solid #B1B1B1;
-    display: flex;
-    justify-content: center;
-  }
-  &__stick{
-    position: absolute;
-    top: 15px;
-    left: 20px;
-    z-index: 1;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 21px;
-    padding-right: 30px;
-    span,a{
-      text-decoration: none;
-      margin-right: 5px;
-      color: #ffffff;
-      padding: 3px;
-      margin-bottom: 5px;
-    }
-    .action{
-      background-color: #C60505;
-    }
-    .new{
-      background-color: #192864;
-    }
-  }
-  &__info{
-    position: absolute;
-    top: 14px;
-    right: 14px;
-    z-index: 1;
-    .btn{
-      padding: 0;
-      margin: 0 0 8px;
-      display: block;
-    }
-    .icon{
-      margin: 0;
-      width: 20px;
-    }
-  }
-  &__figure{
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    width: 100%;
-    img{
-      display: block;
-      margin: 0 auto;
-      object-fit: cover;
-    }
-  }
-  &__content{
-    padding: 11px 11px 0;
-    position: relative;
-    flex: 1;
-  }
-  &__articul{
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 159.99%;
-    color: #808080;
-    margin: 0 0 5px;
-  }
-  &__name{
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 149.99%;
-    color: #000000;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    margin: 0 0 9px;
-    text-decoration: none;
-    &:hover{
-      color: #C60505;
-    }
-  }
-  &__price{
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 149.49%;
-    color: #000000;
-    display: flex;
-    align-items: baseline;
-    justify-content: space-between;
-    span{
-      font-weight: 400;
-      font-size: 13px;
-      line-height: 159.99%;
-      color: #808080;
-    }
-    &-new{
-      font-weight: 700;
-      font-size: 22px;
-      line-height: 33px;
-      letter-spacing: -0.03em;
-      color: #FF0000;
-    }
-    &-old{
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 149.49%;
-      text-decoration-line: line-through;
-      color: #737373;
-    }
-    &-cur{
-      font-weight: 700;
-      font-size: 22px;
-      line-height: 33px;
-      letter-spacing: -0.03em;
-      color: #000000;
-    }
-  }
-  &__footer{
-    position: absolute;
-    top: 100%;
-    overflow: hidden;
-    width: 100%;
-    opacity: 0;
-    height: 0;
-    visibility:hidden;
-    padding: 0 11px 11px;
-    background-color: #FFFFFF;
-    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.13);
-  }
-  &__stock{
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 21px;
-    color: #000000;
-  }
-  &__basket{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 8px;
-    .btn{
-      flex: 1 0 50%;
-      max-width: 129px;
-      padding: 20px;
-      text-transform: uppercase;
-    }
-  }
-  @include r(1023){
-    &__articul{
-      font-size: 11px;
-      line-height: 18px;
+    &__content{
+        display: block;
+        background-color: var(--white);
+        padding: 10px;
+        color: var(--color-text);
+        font-size: 11px;
+        line-height: 23px;
     }
     &__name{
-      font-size: 13px;
-      line-height: 19px;
-      margin: 0 0 12px;
-    }
-    &__stock{
-      font-size: 11px;
-      line-height: 18px;
-    }
-    &__price{
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 21px;
-      span{
-        font-weight: 400;
+        color: var(--color-head);
         font-size: 13px;
-        line-height: 159.99%;
-        color: #808080;
-      }
-      &-new{
-        font-size: 18px;
-        line-height: 27px;
-      }
-      &-old{
-        font-size: 12px;
-        line-height: 18px;
-      }
-      &-cur{
-        font-size: 18px;
-        line-height: 27px;
-      }
+        font-weight: bold;
     }
-    &__footer{
-      position: relative;
-      visibility: visible;
-      box-shadow: none;
-      top: 0;
+    &__collection{
+        @include truncate-text(3);
     }
-    &__basket{
-      .btn{
-        flex: 1 0 50%;
-        max-width: 129px;
-        padding: 12px 10px;
-        font-size: 11px;
-      }
+    &__anons{
+        @include truncate-text(1);
     }
-  }
-  @include r(424){
-    &__basket{
-      .btn{
-        flex: 1 0 50%;
-        max-width: 50%;
-        padding: 12px 0;
-        font-size: 10px;
-      }
-    }
-  }
 }
