--- a/src/scss/componets/slider-products.scss
+++ b/src/scss/componets/slider-products.scss
@@ -1,85 +1,28 @@
-.slider-products {
-  margin-bottom: 0;
-
-  &__header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 0 16px;
-  }
-
-  &__title {
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 29px;
-    color: #000000;
-    margin: 0;
-  }
-
-  &__all {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    color: #000000;
-    text-decoration: none;
-
-    .icon-dropdown-bottom {
-      width: 13px;
-      height: 15px;
-      transform: rotate(-90deg);
-      margin: 0;
-    }
-  }
-
-  &__body {
+.slider-products{
+    padding: 80px 20px;
+    width: 100vw;
     position: relative;
-  }
-
-  .swiper-products {
-    padding-bottom: 110px;
+    left: 50%;
+    transform: translate(-50%,0);
     overflow: hidden;
-  }
-
-  .swiper-button-prev,
-  .swiper-button-next {
-    width: 49px;
-    height: 49px;
-    background-color: #D9D9D9;
-    border-radius: 50%;
-    background-image: url("../img/icons-sprite.svg#arrow-slider-left-light");
-    background-repeat: no-repeat;
-    background-size: 17px;
-    background-position: center;
-    margin-top: 0;
-    top: 130px;
-
-    &:after {
-      display: none;
+    &__header{
+        text-align: center;
+        max-width: 820px;
+        margin: 0 auto 60px;
     }
-  }
-
-  .swiper-button-prev {
-    left: -25px;
-    transform: rotate(180deg);
-  }
-
-  .swiper-button-next {
-    right: -25px;
-  }
-
-  @include r(1023) {
-    .swiper-button-prev,
-    .swiper-button-next {
-      display: none;
+    &__title{
+        color: #555555;
+        font-size: 27px;
+        line-height: 44px;
+        font-weight: bold;
     }
-  }
-  @include r(767){
-    &__title {
-      font-size: 18px;
-      line-height: 21px;
+    &__subtitle{
+        color: #777777;
+        font-size: 17px;
+        line-height: 32px;
+        margin-top: 20px;
     }
-    .swiper-products {
-      padding-bottom: 39px;
+    &__body{
+        text-align: center;
     }
-  }
 }
