--- a/src/scss/componets/product-item.scss
+++ b/src/scss/componets/product-item.scss
@@ -2,6 +2,7 @@
     flex: 1 0 418px;
     max-width: 418px;
     box-shadow: 0 1px 3px rgba(var(--black),0.12);
+    margin: 0 auto;
     &__figure{
         margin: 0;
         padding: 0;
