--- a/src/template/_footer.html
+++ b/src/template/_footer.html
@@ -1,5 +1,39 @@
 <div class="footer">
     <div class="container">
-
+        <div class="footer__body">
+            <div class="footer__logos">
+                <img class="img-fluid" src="./img/footer-logo1.png" width="103" height="103" alt="">
+                <img class="img-fluid" src="./img/footer-logo2.png" width="103" height="103" alt="">
+                <img class="img-fluid" src="./img/footer-logo3.png" width="103" height="103" alt="">
+                <img class="img-fluid" src="./img/footer-logo4.png" width="103" height="103" alt="">
+            </div>
+            <div class="footer__menu">
+                <div class="footer__item">
+                    <div class="footer__title">Unfinished</div>
+                    <a href="#">Engineered</a>
+                    <a href="#">Solid</a>
+                    <a href="#">Reclaimed</a>
+                    <a href="#">Accessories</a>
+                </div>
+                <div class="footer__item">
+                    <div class="footer__title">Pre-Finished</div>
+                    <a href="#">Monet Collection</a>
+                    <a href="#">Degas collection</a>
+                    <a href="#">Klein Collection</a>
+                    <a href="#">Accessories</a>
+                </div>
+                <div class="footer__item">
+                    <div class="footer__title">Quick Link</div>
+                    <a href="#">Our Story</a>
+                    <a href="#">Dealer Locator</a>
+                    <a href="#">Representations</a>
+                    <a href="#">General Inquiries</a>
+                    <a href="#">Samples</a>
+                </div>
+            </div>
+            <div class="footer__copyright">
+                © Copyright 2023 <b>European Wood</b> | Developed by <b>Karachyov</b>
+            </div>
+        </div>
     </div>
 </div>
