--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -1,5 +1,11 @@
 <header class="header">
     <div class="container">
+        <div class="header__body">
+            <button class="header__menu"></button>
+            <a href="#" class="header__logo">
+                <img class="img-fluid" src="./img/logo-header.png" width="162" height="124" alt="">
+            </a>
 
+        </div>
     </div>
 </header>
