--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -8,7 +8,6 @@
         gap: 20px 40px;
         align-items: center;
         overflow: auto;
-        border-bottom: 1px solid #AAAAAA;
         &::-webkit-scrollbar {
             height: 3px;
         }
@@ -27,24 +26,23 @@
         li {
             transition: all 0.3s ease;
             text-align: center;
-            font-family: 'Roboto';
             font-style: normal;
             font-weight: 400;
-            font-size: 18px;
-            line-height: 32px;
+            font-size: 13px;
+            line-height: 25px;
             color: #000000;
-            padding: 10px 0;
+            padding: 6px 0;
             cursor: pointer;
             &.active {
-                border-bottom: 2px solid #000000;
+                border-bottom: 3px solid #956B41;
             }
             &:hover {
                 transition: all 0.3s ease;
                 opacity: 0.7;
-                color: #192864;
+                color: #956B41;
             }
             a{
-                color: #000000;
+                color: #121212;
                 text-decoration: none;
                 white-space: nowrap;
             }
