--- a/src/scss/volkewood.scss
+++ b/src/scss/volkewood.scss
@@ -96,8 +96,8 @@ a{
 	max-width: 1284px;
 	margin-left: auto;
 	margin-right: auto;
-	padding-left: 40px;
-	padding-right: 40px;
+	padding-left: 20px;
+	padding-right: 20px;
 	@include r(1023){
 		padding-left: 30px;
 		padding-right: 30px;
@@ -195,6 +195,7 @@ a{
 @import "componets/slider-products";
 @import "componets/product-item";
 @import "componets/banner";
+@import "componets/collection";
 
 
 
