--- a/src/scss/volkewood.scss
+++ b/src/scss/volkewood.scss
@@ -188,6 +188,27 @@ a{
 	}
 }
 
+.to-top{
+	position: fixed;
+	right: 20px;
+	bottom: 20px;
+	z-index: 10;
+	width: 38px;
+	height: 38px;
+	border: 2px solid #8D8D8D;
+	cursor: pointer;
+	&:before{
+		content: '\2191';
+		font-size: 36px;
+		line-height: 26px;
+		width: 100%;
+		height: 100%;
+		text-align: center;
+		display: block;
+		color: #8D8D8D;
+	}
+}
+
 
 @import "componets/header";
 @import "componets/footer";
@@ -196,6 +217,7 @@ a{
 @import "componets/product-item";
 @import "componets/banner";
 @import "componets/collection";
+@import "componets/nav";
 
 
 
