--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="container">
         <div class="header__body">
-            <button class="header__menu"></button>
+            <button class="header__menu js-menu"></button>
             <a href="#" class="header__logo">
                 <img class="img-fluid" src="./img/logo-header.png" width="162" height="124" alt="">
             </a>
@@ -9,3 +9,15 @@
         </div>
     </div>
 </header>
+
+<nav class="nav">
+    <ul class="nav__list">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Unfinished</a></li>
+        <li><a href="#">Pre-Finished</a></li>
+        <li><a href="#">Resources</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">888-735-3370</a></li>
+    </ul>
+</nav>
