--- a/src/scss/volkewood.scss
+++ b/src/scss/volkewood.scss
@@ -225,6 +225,8 @@ p{
 @import "componets/collection";
 @import "componets/nav";
 @import "componets/collection-section";
+@import "componets/catalog-section";
+@import "componets/pagination";
 
 
 
