--- a/src/scss/volkewood.scss
+++ b/src/scss/volkewood.scss
@@ -227,6 +227,7 @@ p{
 @import "componets/collection-section";
 @import "componets/catalog-section";
 @import "componets/pagination";
+@import "componets/gallery";
 
 
 
