--- a/src/scss/componets/collection-section.scss
+++ b/src/scss/componets/collection-section.scss
@@ -1,8 +1,9 @@
 .collection-section{
+    margin-top: 75px;
     &__header{
         text-align: center;
         max-width: 1035px;
-        margin: 75px auto 0;
+        margin: 0 auto;
     }
     &__title{
         font-size: 33px;
