--- a/src/scss/volkewood.scss
+++ b/src/scss/volkewood.scss
@@ -228,6 +228,7 @@ p{
 @import "componets/catalog-section";
 @import "componets/pagination";
 @import "componets/gallery";
+@import "componets/detail";
 
 
 
