--- a/src/scss/volkewood.scss
+++ b/src/scss/volkewood.scss
@@ -31,7 +31,7 @@ html{
 	/*scroll-behavior: smooth;*/
 }
 body{
-	background-color: var(--bg);
+	background-color: var(--white);
 	font-family: 'Montserrat', sans-serif;
 	&.lock{
 		overflow: hidden;
