--- a/src/scss/componets/slider-products.scss
+++ b/src/scss/componets/slider-products.scss
@@ -5,6 +5,7 @@
     left: 50%;
     transform: translate(-50%,0);
     overflow: hidden;
+    background-color: #E7E6E4;
     &__header{
         text-align: center;
         max-width: 820px;
