--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header @@scroll" >
     <div class="container">
         <div class="header__body">
             <button class="header__menu js-menu"></button>
