--- a/src/scss/componets/footer.scss
+++ b/src/scss/componets/footer.scss
@@ -36,6 +36,7 @@
         font-size: 15px;
         line-height: 21px;
         font-weight: bold;
+        margin-bottom: 10px;
     }
     &__copyright{
         margin-top: 76px;
@@ -55,6 +56,37 @@
         &__item{
             flex: 1 0 130px;
             max-width: 180px;
+        }
+    }
+    @include r(767){
+        padding: 40px 0 20px;
+        &__logos{
+            flex: 1 0 100%;
+            max-width: 100%;
+            margin-right: 0;
+            justify-content: space-between;
+            margin-bottom: 40px;
+            img{
+                flex: 1 0 calc(25% - 20px);
+                max-width: calc(25% - 20px);
+            }
+        }
+        &__menu{
+            flex: 1 0 100%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            a{
+                font-size: 11px;
+                line-height: 23px;
+                color: #8D8D8D;
+                display: block;
+                padding: 5px 0;
+            }
+        }
+        &__copyright{
+            margin-top: 40px;
+            padding-top: 20px;
         }
     }
 }
