--- a/src/scss/componets/collection.scss
+++ b/src/scss/componets/collection.scss
@@ -19,6 +19,8 @@
     &__content{
         flex: 1 0 50%;
         max-width: 50%;
+        padding: 0 0 40px;
+        margin-right: 20px;
     }
     &__figure{
         flex: 1 0 50%;
@@ -26,6 +28,8 @@
         margin-top: -157px;
         img{
             display: block;
+            height: 100%;
+            object-fit: cover;
         }
     }
     &__name{
@@ -44,6 +48,22 @@
         &__content{
             margin: 0;
             background-color: transparent;
+        }
+    }
+    @include r(767){
+        &__item{
+            flex-wrap: wrap;
+        }
+        &__content{
+            flex: 1 0 100%;
+            max-width: 100%;
+            padding: 0 0 40px;
+            margin-right: 0;
+        }
+        &__figure{
+            flex: 1 0 100%;
+            max-width: calc(100% + 40px);
+            margin: 0 -20px;
         }
     }
 }
