--- a/src/scss/componets/hero.scss
+++ b/src/scss/componets/hero.scss
@@ -63,4 +63,17 @@
             }
         }
     }
+    @include r(767){
+        &__btns{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            .btn{
+                max-width: 100%;
+                width: 100%;
+                text-transform: uppercase;
+                margin-top: 20px;
+            }
+        }
+    }
 }
