--- a/src/scss/componets/product-item.scss
+++ b/src/scss/componets/product-item.scss
@@ -1,7 +1,7 @@
 .product-item{
     flex: 1 0 418px;
     max-width: 418px;
-    box-shadow: 0 1px 3px rgba(var(--black),0.12);
+    box-shadow: 0 4px 8px 0px rgba(0,0,0, 0.2);
     margin: 0 auto;
     &__figure{
         margin: 0;
