--- a/src/scss/componets/detail.scss
+++ b/src/scss/componets/detail.scss
@@ -8,15 +8,16 @@
     }
     &__slider{
         overflow: hidden;
-        flex: 1 0 700px;
-        max-width: 700px;
+        flex: 1 0 calc(55% - 20px);
+        max-width: 55%;
         img{
             display: block;
             object-fit: cover;
         }
     }
     &__content{
-        flex: 1;
+        flex: 1 0 calc(40% - 20px);
+        max-width: 45%;
     }
     &__share{
         margin-top: 20px;
@@ -32,6 +33,7 @@
         margin-top: 15px;
     }
     .tabs{
+        margin-bottom: 30px;
         &__content{
             background-color: transparent;
             ul{
@@ -43,6 +45,35 @@
                     color: #777;
                 }
             }
+        }
+    }
+    @include r(1023){
+        &__btns{
+            .btn{
+                max-width: 100%;
+                display: block;
+                margin-bottom: 10px;
+            }
+        }
+        .tabs{
+            margin-bottom: 20px;
+            &__content{
+                margin-bottom: 0;
+            }
+        }
+    }
+    @include r(767){
+        &__slider{
+            overflow: hidden;
+            flex: 1 0 100%;
+            max-width: 100%;
+        }
+        &__content{
+            flex: 1 0 100%;
+            max-width: 100%;
+        }
+        .slider-thumbs{
+            display: none;
         }
     }
 }
