--- a/src/scss/componets/catalog-section.scss
+++ b/src/scss/componets/catalog-section.scss
@@ -20,7 +20,14 @@
     }
     .product-item{
         flex: 1 0 calc(33.3% - 20px);
-        max-width: calc(33.3% - 20px);
+        max-width: 33.3%;
         margin: 0;
+    }
+    @include r(767){
+        .product-item{
+            flex: 1 0 calc(50% - 20px);
+            max-width: 50%;
+            margin: 0;
+        }
     }
 }
