--- a/src/scss/componets/hero.scss
+++ b/src/scss/componets/hero.scss
@@ -8,6 +8,7 @@
     text-align: center;
     display: flex;
     align-items: flex-end;
+
     &__title{
         font-size: 48px;
         line-height: 56px;
@@ -27,6 +28,7 @@
         position: relative;
         width: 100%;
         height: 100%;
+        align-self: flex-start;
         &:after{
             content: '';
             position: absolute;
