--- a/src/scss/volkewood.scss
+++ b/src/scss/volkewood.scss
@@ -48,6 +48,9 @@ a{
 .wrp {
 	overflow: hidden;
 	position: relative;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 	&__overlay{
 		background-color: rgba(0,0,0,.15);
 		width: 100%;
