--- a/src/scss/componets/header.scss
+++ b/src/scss/componets/header.scss
@@ -68,4 +68,21 @@
         height: 33px;
         cursor: pointer;
     }
+    &__phone{
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translate(0,-50%);
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        color: var(--white);
+        font-size: 20px;
+        font-weight: bold;
+    }
+    @include r(767){
+        &__phone{
+            display: none;
+        }
+    }
 }
