--- a/src/template/_header.html
+++ b/src/template/_header.html
@@ -6,7 +6,8 @@
                 <img class="img-fluid" src="./img/logo-header.png" width="162" height="124" alt="">
             </a>
 
-            <a href="" class="header__search"></a>
+            <!--<a href="" class="header__search"></a>-->
+            <a href="" class="header__phone">454-454-4543</a>
         </div>
     </div>
 </header>
