--- a/src/scss/componets/hero.scss
+++ b/src/scss/componets/hero.scss
@@ -3,18 +3,22 @@
     width: 100vw;
     left: 50%;
     transform: translate(-50%,0);
-    min-height: 260px;
+    min-height: 350px;
     max-height: 770px;
     text-align: center;
     display: flex;
     align-items: flex-end;
-
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: cover;
     &__title{
         font-size: 48px;
         line-height: 56px;
         color: var(--white);
+        margin: 0;
     }
     &__btns{
+        margin-top: 30px;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -25,10 +29,12 @@
         }
     }
     &__bg{
-        position: relative;
+        position: absolute;
         width: 100%;
         height: 100%;
         align-self: flex-start;
+        background-repeat: no-repeat;
+        background-size: cover;
         &:after{
             content: '';
             position: absolute;
@@ -45,13 +51,14 @@
         }
     }
     &__content{
-        padding: 40px 20px 60px;
+        padding: 40px 20px 0;
         max-width: 945px;
         margin: 0 auto;
         z-index: 10;
         position: absolute;
         left: 0;
         right: 0;
+        bottom: 40px;
     }
     @include r(1023){
         height: 100vh;
